--- a/BMS/chart.html
+++ b/BMS/chart.html
@@ -1,5 +1,109 @@
+<html>
 <head>
 <title>tyrcs Chart Table</title>
 <meta name="bmstable" content="https://tyrcs.github.io/BMS/header.json" />
+<meta http-equiv="Content-Script-Type" content="text/javascript">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<link href="style.css" rel="stylesheet" type="text/css" media="screen,print">
 </head>
 
+<body class="diff" style=""><script type="text/javascript" charset="utf-8" src="//asumi.shinobi.jp/encount"></script><script type="text/javascript" charset="utf-8" src="//cnobi.jp/v1/asumi/arms/1.17.46"></script><div style="text-align: center;"><div style="display: inline-block; position: relative; z-index: 9999;"><script type="text/javascript" charset="utf-8" src="//asumi.shinobi.jp/fire?f=435"></script><div id="asumi-frame-435-1792" style="height: 280px;"><script type="text/javascript">
+
+<p style="color:#ffffee">1</p>
+<!--　　　　　ここから難易度表本体　　　　　-->
+<div class="tableflame">
+<table align="center" cellspacing="1" cellpadding="2　border=&quot;0&quot;" bgcolor="#000000" id="table_int"><tbody><tr height="20" style="color:white;background-color:#666666"><td align="center">LV</td><td align="center">タイトル</td><td align="center">本体</td><td align="center">差分</td><td align="center">コメント</td></tr><tr class="tr_separate" id="？5"><td colspan="6" align="center"><b>？5 (1譜面)</b></td></tr><tr class="tr_normal"><td width="5%">？5</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=7d443d05d01e46be19aa0d5e8946fe9b" target="_blank">FALL THE BOMB</a></td><td width="20%">dge-nesis SPThx W.CROW</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_separate" id="？6"><td colspan="6" align="center"><b>？6 (3譜面)</b></td></tr><tr class="tr_normal"><td width="5%">？6</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=0846a735a405d713bc386b256c4046d5" target="_blank">HARD RUNNING IN THE air (EASY-Style)</a></td><td width="20%">DJ SIMON</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？6</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=559761c85b0f0c84465493fe87429680" target="_blank">Qtho one (EASY-Style)</a></td><td width="20%">kors k with Silver Joe</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_new"><td width="5%">？6</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=69d36911c7ae8b435341abb6f295aa58" target="_blank">ピアノ狂騒曲第零番「神姫」(Light7)</a></td><td width="20%"><a href="http://kurenaissance.web6.jp/">kurena</a></td><td width="10%"></td><td width="15%">BPM変化は130→150→100→80→140→110→170→180→190→60→190→170→150→13→130→(演奏終了)→255<br><br>譜面傾向：ソフラン、階段、縦連</td></tr><tr class="tr_separate" id="？7"><td colspan="6" align="center"><b>？7 (1譜面)</b></td></tr><tr class="tr_normal"><td width="5%">？7</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=cc04cb9c95b00a1382a460b267bc8a68" target="_blank">Jack-the-Ripper◆[7NORMAL]</a></td><td width="20%"><a href="h>URL</th><td colspan=">sasakure.UK</a></td><td width="10%"></td><td width="15%">所属チーム「Black Jacks」</td></tr><tr class="tr_separate" id="？8"><td colspan="6" align="center"><b>？8 (4譜面)</b></td></tr><tr class="tr_update"><td width="5%">？8</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=ad2d53138bc037bb0974b6846626713f" target="_blank">Bullshit Delta</a></td><td width="20%">ANDROID-TC</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？8</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=caa4fa41d636e45c940e02f038a39e04" target="_blank">past glow -SP NORMAL-</a></td><td width="20%">parakeet 41 BGA:vj tote</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？8</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=80dc36fb335f9853c505c1830207c122" target="_blank">Qtho one</a></td><td width="20%">kors k with Silver Joe</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_new"><td width="5%">？8</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=a8db43505ea1206880eb0daaee8543ef" target="_blank">おはなし</a></td><td width="20%">lonely katydid/ひなたゆかり はむ</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_separate" id="？9"><td colspan="6" align="center"><b>？9 (3譜面)</b></td></tr><tr class="tr_update"><td width="5%">？9</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=e188aa9486998d1a5082d75c097816bf" target="_blank">FALL THE BOMB</a></td><td width="20%">dge-nesis SPThx W.CROW</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？9</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=48c9e2e4920670e63fcaf96571320e0e" target="_blank">HARD RUNNING IN THE air</a></td><td width="20%">DJ SIMON</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？9</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=0c710d2d0536e0180341f2e2d9273412" target="_blank">コウソク*コンプライアンス[7KEYS]</a></td><td width="20%">コペン</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_separate" id="？10"><td colspan="6" align="center"><b>？10 (4譜面)</b></td></tr><tr class="tr_normal"><td width="5%">？10</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=3e4af9030474b4502978678efdbc49ac" target="_blank">I[NORMAL]</a></td><td width="20%"><a href="http://manbow.nothing.sh/event/event.cgi?action=More_def&amp;num=1&amp;event=79">LeaF Movie:Optie</a></td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？10</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=a46e2f6bdc014550bdbc9190c6941e53" target="_blank">past glow -SP HYPER-</a></td><td width="20%">parakeet 41 BGA:vj tote</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？10</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=d60b75303d4089188d62a62888d68997" target="_blank">Qtho one (MANIAC-Style)</a></td><td width="20%">kors k</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？10</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=2f25fb20f7d5015fc045df6e41c8a6c5" target="_blank">ピアノ狂騒曲第零番「神姫」(7keys)</a></td><td width="20%"><a href="http://kurenaissance.web6.jp/">kurena</a></td><td width="10%"></td><td width="15%">BPM変化は130→150→100→80→140→110→170→180→190→60→190→170→150→13→130→(演奏終了)→255<br><br>譜面傾向：ソフラン、階段、縦連、トリル、二重トリル、局所難、終盤殺し</td></tr><tr class="tr_separate" id="？11"><td colspan="6" align="center"><b>？11 (5譜面)</b></td></tr><tr class="tr_normal"><td width="5%">？11</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=ece062c6769e0aa209396b4a92acaa30" target="_blank">HARD RUNNING IN THE air (MANIAC-Style)</a></td><td width="20%">DJ SIMON</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？11</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=bf9396b2d6cf5673654543828de0e126" target="_blank">Jack-the-Ripper◆[7EXPERT]</a></td><td width="20%"><a href="h>URL</th><td colspan=">sasakure.UK</a></td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？11</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=b6bb14891b3b72e56d265d6fb6f9d458" target="_blank">past glow -SP ANOTHER-</a></td><td width="20%">parakeet 41 BGA:vj tote</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？11</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=7db6ca7a69113d72f0b816d40d261335" target="_blank">おはなし</a></td><td width="20%">lonely katydid/ひなたゆかり はむ</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？11</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=fe65390dfa370ec2045a1ab39739f91c" target="_blank">コウソク*コンプライアンス[ANOTHER7(NoLongNotes)]</a></td><td width="20%">コペン</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_separate" id="？12"><td colspan="6" align="center"><b>？12 (7譜面)</b></td></tr><tr class="tr_normal"><td width="5%">？12</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=52ca0bcf3340d58c01dc93fd6900a0d7" target="_blank">Broken Hearts[Broken]</a></td><td width="20%"><a href="http://manbow.nothing.sh/event/event.cgi?action=More_def&amp;num=80&amp;event=83">eFeL (mov. SoundOnly) Obj : Chelp</a></td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？12</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=5330aa1b023d62da20b5f8af92f5bd9b" target="_blank">Bullshit Delta</a></td><td width="20%">ANDROID-TC</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_update"><td width="5%">？12</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=bf3389b5f9af455550a922b45470950b" target="_blank">HARD RUNNING IN THE air (TERRIBLE-Style)</a></td><td width="20%">DJ SIMON</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_new"><td width="5%">？12</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=89ae5595ae852177c9867ff9d01d8c86" target="_blank">I[HYPER]</a></td><td width="20%"><a href="http://manbow.nothing.sh/event/event.cgi?action=More_def&amp;num=1&amp;event=79">LeaF Movie:Optie</a></td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？12</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=00c94a22ff842f04baa77fd194e77092" target="_blank">Qtho one (TERRIBLE-Style)</a></td><td width="20%">kors k with Silver Joe</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？12</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=98f080918dbf420f460516cbb2d3cc52" target="_blank">おはなし</a></td><td width="20%">lonely katydid/ひなたゆかり はむ</td><td width="10%"></td><td width="15%"></td></tr><tr class="tr_normal"><td width="5%">？12</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=928043d2a1c0b243d664530dcfdeb672" target="_blank">ピアノ狂騒曲第零番「神姫」(another)</a></td><td width="20%"><a href="http://kurenaissance.web6.jp/">kurena</a></td><td width="10%"></td><td width="15%">BPM変化は130→150→100→80→140→110→170→180→190→60→190→170→150→13→130→(演奏終了)→255<br><br>譜面傾向：ソフラン</td></tr></tbody></table>
+</div>
+<script language="javascript" type="text/javascript">
+$(document).ready(function(){
+	$.getJSON($("meta[name=bmstable]").attr("content"), function(header){
+		$.getJSON(header.data_url, function(information){
+			makeBMSTable(information,header.symbol);
+		});
+	});
+});
+
+function makeBMSTable(info, mark) {
+    var x = "";
+    var ev = "";
+    var count = 0;
+    var obj = $("#table_int");
+    // 表のクリア
+    obj.html("");
+    $("<tr height='20' style='color:white;background-color:#666666'><td align='center'>LV</td><td align='center'>タイトル</td><td align='center'>本体</td><td align='center'>差分</td><td align='center'>コメント</td></tr>").appendTo(obj);
+    var obj_sep = null;
+    for (var i = 0; i < info.length; i++) {
+        // 難度ごとの区切り
+        if (x != info[i].level) {
+            // 前の区切りに譜面数、平均密度を追加
+          	if (obj_sep != null) {
+                obj_sep.html("<td colspan='6' align='center'>" + "<b>" + mark + x + " (" + count + "譜面)</b></td>");
+            }
+            obj_sep = $("<tr class='tr_separate' id='" + mark + info[i].level + "'></tr>");
+            obj_sep.appendTo(obj);
+            count = 0;
+            x = info[i].level;
+        }
+        // 本文
+        var str = $("<tr class='tr_normal'></tr>");
+        if(info[i].state == 1) {
+        str = $("<tr class='tr_new'></tr>");
+        }
+        if(info[i].state == 2) {        
+        str = $("<tr class='tr_update'></tr>");
+        }
+        // レベル表記
+        $("<td width='5%'>" + mark + x + "</td>").appendTo(str);
+        // タイトル
+        $("<td width='20%'>" + "<a href='http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsmd5=" + info[i].md5 + "' target='_blank'>" + info[i].title + "</a></td>").appendTo(str);
+        // アーティスト
+        var astr = "";
+        if(info[i].url != null) {
+        	if(info[i].artist != null) {
+        		astr = "<a href='" + info[i].url + "'>" + info[i].artist + "</a>";
+        	} else {
+        		astr = "<a href='" + info[i].url + "'>" + info[i].url + "</a>";
+        	}
+        } else {
+        	if(info[i].artist != null) {
+        		astr = info[i].artist;
+        	}
+        }
+        if(info[i].url_pack != null) {
+        	if(info[i].name_pack != null) {
+        		astr += "<br />(<a href='" + info[i].url_pack + "'>" + info[i].name_pack + "</a>)";
+        	} else {
+        		astr += "<br />(<a href='" + info[i].url_pack + "'>" + info[i].url_pack + "</a>)";
+        	}
+        } else {
+        	if(info[i].name_pack != null) {
+        		astr += "<br />(" + info[i].name_pack + ")";
+        	}
+        }
+        $("<td width='20%'>" + astr + "</td>").appendTo(str);
+        // 差分
+        if(info[i].url_diff != null) {
+        	if(info[i].name_diff != null) {
+	        $("<td width='10%'><a href='" + info[i].url_diff + "'>" + info[i].name_diff + "</a></td>").appendTo(str);
+        	} else {
+	        $("<td width='10%'><a href='" + info[i].url_diff + "'>" + info[i].url_diff + "</a></td>").appendTo(str);
+        	}
+        } else {
+        	if(info[i].name_diff != null) {
+	        $("<td width='10%'>" + info[i].name_diff + "</td>").appendTo(str);
+        	} else {
+	        $("<td width='10%'></td>").appendTo(str);
+        	}
+        }
+        // コメント
+        $("<td width='15%'>" + info[i].comment + "</td>").appendTo(str);
+        str.appendTo(obj);
+        count++;
+    }
+    // 最後の区切り処理
+    if (obj_sep != null) {
+        obj_sep.html("<td colspan='6' align='center'>" + "<b>" + mark + x + " (" + count + "譜面)</b></td>");
+    }
+}
+</script>
+</html>
