--- a/BMS/chart.html
+++ b/BMS/chart.html
@@ -7,7 +7,7 @@
 <link href="style.css" rel="stylesheet" type="text/css" media="screen,print">
 </head>
 
-<body class="diff" style=""><script type="text/javascript" charset="utf-8" src="//asumi.shinobi.jp/encount"></script><script type="text/javascript" charset="utf-8" src="//cnobi.jp/v1/asumi/arms/1.17.46"></script><div style="text-align: center;"><div style="display: inline-block; position: relative; z-index: 9999;"><script type="text/javascript" charset="utf-8" src="//asumi.shinobi.jp/fire?f=435"></script><div id="asumi-frame-435-1792" style="height: 280px;"><script type="text/javascript">
+<body class="diff" style=""><div style="text-align: center;"><div style="display: inline-block; position: relative; z-index: 9999;"><div id="asumi-frame-435-1792" style="height: 280px;"><script type="text/javascript">
 
 <p style="color:#000000">1</p>
 <!--　　　　　ここから難易度表本体　　　　　-->
@@ -103,4 +103,6 @@ function makeBMSTable(info, mark) {
     }
 }
 </script>
+</div></div></div>
+</body>
 </html>
