--- a/BMS/chart.html
+++ b/BMS/chart.html
@@ -7,7 +7,7 @@
 <link href="style.css" rel="stylesheet" type="text/css" media="screen,print">
 </head>
 
-<body class="diff" style=""><div style="text-align: center;"><div style="display: inline-block; position: relative; z-index: 9999;"><div id="asumi-frame-435-1792" style="height: 280px;"><script type="text/javascript">
+<body class="diff" style=""><div style="text-align: center;"><div style="display: inline-block; position: relative; z-index: 9999;"><div id="asumi-frame-435-1792" style="height: 280px;">
 
 <p style="color:#000000">1</p>
 <!--　　　　　ここから難易度表本体　　　　　-->
@@ -102,7 +102,6 @@ function makeBMSTable(info, mark) {
         obj_sep.html("<td colspan='6' align='center'>" + "<b>" + mark + x + " (" + count + "譜面)</b></td>");
     }
 }
-</script>
 </div></div></div>
 </body>
 </html>
