--- a/BMS/chart.html
+++ b/BMS/chart.html
@@ -106,6 +106,7 @@ function makeBMSTable(info, mark) {
         obj_sep.html("<td colspan='6' align='center'>" + "<b>" + mark + x + " (" + count + "Charts)</b></td>");
     }
 }
+</script>
 </div></div></div>
 </body>
 </html>
