--- a/BMS/chart.html
+++ b/BMS/chart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>tyrcs Chart Table</title>
+<title>tyrcs' BMS Chart Table</title>
 <meta name="bmstable" content="https://tyrcs.github.io/BMS/header.json" />
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <meta http-equiv="Content-Style-Type" content="text/css">
@@ -11,7 +11,7 @@
 
 <body class="diff" style=""><div style="text-align: center;"><div style="display: inline-block; position: relative; z-index: 9999;"><div id="asumi-frame-435-1792" style="height: 280px;">
 
-<p style="color:#ffffaa">List of tyrcs Charts<br>
+<p style="color:#ffffaa">List of my BMS charts<br>
 TC-3 = ★1~★9<br>
 TC-2 = ★10~★15<br>
 TC-1 = ★16~★18<br>
