--- a/BMS/chart.html
+++ b/BMS/chart.html
@@ -12,6 +12,8 @@
 <body class="diff" style=""><div style="text-align: center;"><div style="display: inline-block; position: relative; z-index: 9999;"><div id="asumi-frame-435-1792" style="height: 280px;">
 
 <p style="color:#ffffaa">List of my BMS charts<br>
+hopefully should support BeMusicSeeker<br>
+<br>
 TC-3 = ★1~★9<br>
 TC-2 = ★10~★15<br>
 TC-1 = ★16~★18<br>
