--- a/BMS/chart.html
+++ b/BMS/chart.html
@@ -24,6 +24,7 @@ TC12 = dy7<br>
 ...<br>
 TC15 = dy10<br>
 <br>
+any charts with difficulty of ★0 or lower are excluded<br>
 work in progress...<br>
 </p>
 <!--　　　　　ここから難易度表本体　　　　　-->
