--- a/BMS/chart.html
+++ b/BMS/chart.html
@@ -28,7 +28,9 @@ TC12 = dy7<br>
 TC15 = dy10<br>
 <br>
 any charts with difficulty of ★0 or lower are excluded<br>
-work in progress...<br>
+<br></p>
+<p style="color:#ffaaff">
+(20240527 Update) almost every chart (~90%) of mine should be in now<br>
 <br>
 </p>
 <!--　　　　　ここから難易度表本体　　　　　-->
