--- a/BMS/chart.html
+++ b/BMS/chart.html
@@ -28,7 +28,9 @@ TC12 = dy7<br>
 TC15 = dy10<br>
 <br>
 any charts with difficulty of ★0 or lower are excluded<br>
-charts of non-keysounded song are excluded<br></p>
+charts of non-keysounded song are excluded<br>
+<br>
+the Score View feature is provided by bms-score-viewer.pages.dev (by Kurokotei)</p>
 <p style="color:#aaffff">
 Contact: <a href="https://space.bilibili.com/320597436">Bilibili</a> <a href="https://x.com/tyrcs2">Twitter</a><br>
 </p>
@@ -79,7 +81,7 @@ function makeBMSTable(info, mark) {
         str = $("<tr class='tr_update'></tr>");
         }
         // レベル表記
-        $("<td width='5%' align='left'>" + mark + x + "</td>").appendTo(str);
+        $("<td width='5%'>" + mark + x + "</td>").appendTo(str);
         // タイトル
         $("<td width='20%' align='left'>" + "<a href='http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsmd5=" + info[i].md5 + "' target='_blank'>" + info[i].title + "</a></td>").appendTo(str);
         // アーティスト
