--- a/BMS/chart.html
+++ b/BMS/chart.html
@@ -39,6 +39,10 @@ Contact: <a href="https://space.bilibili.com/320597436">Bilibili</a> <a href="ht
 (20240527 Update) almost every chart (~90%) of mine should be in now<br>
 <br>
 </p>
+<p style="color:#ffffff">
+Latest Update: 2025/08/31<br>
+<br>
+</p>
 <!--　　　　　ここから難易度表本体　　　　　-->
 <div class="tableframe">
 <table align="center" cellspacing="1" cellpadding="2　border=&quot;0&quot;" bgcolor="#000000" id="table_int"><tbody></tbody></table>
